<resources>
    <string name="API_KEY">AIzaSyDjHtC-8ynLlvAwbpqkb-vB7KAygzGRDmI</string>
    <string name="app_name">Disaster Management</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ? </string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="register_here">Register here</string>
    <string name="login_here">Login here</string>
    <string name="please_login_to_proceed">Please Provide your credentials to Proceed</string>
    <string name="please_register_to_proceed">We just need to get a few details to get you registered for our services</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disaster_management">Disaster Management</string>
    <string name="events">Events</string>
    <string name="help">Help</string>
    <string name="emergency">Emergency</string>
    <string name="_20">20</string>
    <string name="home">Home</string>
    <string name="sample_text">Sample Text</string>
    <string name="your_location">Your Location</string>
    <string name="remarks">Remarks</string>
    <string name="enter_some_remarks">Enter some remarks..</string>
    <string name="category">Category</string>
    <string name="category_info">Search your Category and choose from the dropdown</string>
    <string name="username">Username</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_info">Is this the correct image. If so please select Proceed or cancel to choose another image</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="info">Info</string>
    <string name="call">Call</string>
    <string name="t">T</string>
    <string name="error_fetch">Unable to Fetch Emergency Contact List</string>
    <string name="contact_name_placeholder">Contact Name</string>
    <string name="close">Close</string>
    <string name="incident_msg">You reported an incident</string>
    <string name="_ok">OK</string>
    <string name="infected">Infected</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="global_numbers">Global Numbers</string>
    <string name="view_country_specific">View Country Specific</string>
</resources>
