<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/btnLoginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/please_login_to_proceed"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
            <LinearLayout
                android:id="@+id/layoutDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label"
                android:orientation="vertical"
                android:padding="16dp">
                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:background="@drawable/input_fields"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:layout_margin="8dp"/>
                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_margin="8dp"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:background="@drawable/input_fields"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_gravity="end"
                    android:padding="8dp"
                    android:textColor="@color/colorAccent"/>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/log_in"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_background"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/layoutDetails"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"/>
                <TextView
                    android:id="@+id/txtRegHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_here"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>