<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HelpFragment"
    android:background="@color/helpBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_location"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorWhite"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="1dp"
                    android:backgroundTint="@color/lightGrey">

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:padding="16dp"
                android:text="@string/category_info"/>
            <AutoCompleteTextView
                android:id="@+id/chooseCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:completionThreshold="1"
                android:singleLine="true"
                android:background="@drawable/input_fields"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="5dp"
                android:backgroundTint="@color/tabTextColor">

                <ImageView
                    android:id="@+id/openGallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_camera"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remarks"
                android:textColor="@color/colorWhite"
                android:padding="8dp"
                android:layout_margin="8dp"/>
            <EditText
                android:id="@+id/helpRemarks"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textEmailAddress"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:padding="16dp"
                android:hint="@string/enter_some_remarks"
                android:background="@drawable/input_fields"/>
            <Button
                android:id="@+id/btnProceed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:text="@string/proceed"
                android:textAllCaps="true"
                android:background="@drawable/button_layout_success"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>