<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_name_placeholder"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/confirm_info"/>
        <TextView
            android:id="@+id/contactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text"/>
        <TextView
            android:id="@+id/txtClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textAllCaps="true"
            android:layout_gravity="end"
            android:padding="16dp"
            android:textColor="@color/colorRed"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>