<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:gravity="center_vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/contactImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_account"/>
                <TextView
                    android:id="@+id/initial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t"
                    android:visibility="gone"
                    android:gravity="center"
                    android:textSize="42sp"
                    android:background="@drawable/circular_text"/>
                <TextView
                    android:id="@+id/contactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emergency_contact_name"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/contactImage"
                    android:textAllCaps="true"
                    android:padding="16dp"/>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_expand_more"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/moreOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darkGrey"
                    android:layout_marginTop="5dp"/>

                <RelativeLayout
                    android:layout_below="@id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">
                    <TextView
                        android:id="@+id/optionInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_info_outline"
                        android:padding="16dp"
                        android:text="@string/info"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        android:drawablePadding="8dp"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:id="@+id/optionCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_call"
                        android:padding="16dp"
                        android:text="@string/call"
                        android:layout_alignParentEnd="true"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        android:drawablePadding="8dp"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>